fix: styles, save search query

--- a/src/widgets/favorites-list/ui/favorites-list.module.css
+++ b/src/widgets/favorites-list/ui/favorites-list.module.css
@@ -8,7 +8,6 @@
 
 .scrollContainer {
     display: flex;
-    flex: 1;
     min-height: 0;
     overflow-y: auto;
     margin: 24px 0;
@@ -43,6 +42,7 @@
 .headerContainer {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .title {
